--- a/Work experience.html
+++ b/Work experience.html
@@ -45,7 +45,7 @@
 					<li>Telangana University, Telangana, India</li>
 					 <p>CGPA: 8.8/10, Bachelor of Science - Computer Science (JUN 2017 - SEP 2020)</p>
 					<p>Team Lead - Swatch bharath Event at Undergrad level     (JAN 2019)</p>
-					<p> Student worker & Volunteer Work - community service projects to support underprivileged children FEB 2020</p>
+					<p> Student worker & Volunteer Work - community service projects to support underprivileged children (FEB 2020)</p>
 				</p>
 			
 
