--- a/Work experience.html
+++ b/Work experience.html
@@ -44,8 +44,8 @@
 					<li>University of Missouri Kansas City, Masters in Computer Science (JUL 2023 - DEC 2025)</li>
 					<li>Telangana University, Telangana, India</li>
 					 <p>CGPA: 8.8/10, Bachelor of Science - Computer Science (JUN 2017 - SEP 2020)</p>
-					<p>Team Lead - Swatch bharath Event at Undergrad level     (JAN 2019)</p>
-					<p> Student worker & Volunteer Work - community service projects to support underprivileged children (FEB 2020)</p>
+					    <p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead - Swatch bharath Event at Undergrad level     (JAN 2019)</p>
+					    <p> ● Student worker & Volunteer Work - community service projects to support underprivileged children (FEB 2020)</p>
 				</p>
 			
 
