--- a/Work experience.html
+++ b/Work experience.html
@@ -89,11 +89,10 @@
 				<section class="skills">
 					<h3><u>SKILLS & LEADERSHIP</u></h3>
 					<ul>
-						<li>Programming & Scripting Languages: JAVA,Python(Basic) ,JavaScript, Typescript, Node.js</li>
+						<li>Programming & Scripting Languages: JAVA,Python(Intermediate),C++,JavaScript, Typescript, Node.js</li>
 						<li>Web Expertise: Angular, HTML, CSS, Git</li>
 						<li>Frameworks & Databases: Spring boot,MySQL, Gradle, GitHub, Apache, Maven, Tomcat, Jenkins</li>
 						<li>Expertise: IntelliJ, Eclipse IDE, Visual Studio</li>
-						<li>Strong in communication and effectively deals with technical challenges and corresponding solutions.
 						</li>
 					</ul>
 				</section>
@@ -105,9 +104,16 @@
 						</li>
 					</p>
 					<p>
-						<li>Participated in a Social Debate received recognition award with group of 10 debaters regarding
-							Technology
-							and Politics.</li>
+						<li>Volunteer Work - community service projects to support underprivileged children</li>
+					</p>
+				</section>
+				<section class="School Projects">
+					<p>
+						<li>
+							Developed a dynamic and interactive  web application using Angular Framework ,allowing seamless navigation and responsive user interface.
+						<li>
+							Designed and developed a desktop messaging platform using Angular and SpringBoot framework to exchange encrypted messages.
+						</li>
 					</p>
 				</section>
 		
