--- a/Work experience.html
+++ b/Work experience.html
@@ -107,7 +107,7 @@
 						<li>Volunteer Work - community service projects to support underprivileged children</li>
 					</p>
 				</section>
-				<section class="School Projects">
+				<section class="School-Projects">
 					<p>
 						<li>
 							Developed a dynamic and interactive  web application using Angular Framework ,allowing seamless navigation and responsive user interface.
