--- a/Work experience.html
+++ b/Work experience.html
@@ -108,6 +108,7 @@
 					</p>
 				</section>
 				<section class="School-Projects">
+					h3><u>Extra Curricular Activities & Volunteer</u></h3>
 					<p>
 						<li>
 							Developed a dynamic and interactive  web application using Angular Framework ,allowing seamless navigation and responsive user interface.
