--- a/Work experience.html
+++ b/Work experience.html
@@ -108,7 +108,7 @@
 					</p>
 				</section>
 				<section class="School-Projects">
-					h3><u>School-Projects</u></h3>
+					<h3><u>School-Projects</u></h3>
 					<p>
 						<li>
 							Developed a dynamic and interactive  web application using Angular Framework ,allowing seamless navigation and responsive user interface.
