--- a/Work experience.html
+++ b/Work experience.html
@@ -110,10 +110,9 @@
 				<section class="School-Projects">
 					<h3><u>School-Projects</u></h3>
 					<p>
+						<li>Developed a dynamic and interactive  web application using Angular Framework ,allowing seamless navigation and responsive user interface.
 						<li>
-							Developed a dynamic and interactive  web application using Angular Framework ,allowing seamless navigation and responsive user interface.
-						<li>
-							Designed and developed a desktop messaging platform using Angular and SpringBoot framework to exchange encrypted messages.
+						Designed and developed a desktop messaging platform using Angular and SpringBoot framework to exchange encrypted messages.
 						</li>
 					</p>
 				</section>
