--- a/Work experience.html
+++ b/Work experience.html
@@ -57,7 +57,7 @@
 					<ul>
 						<li>Spearheaded cross-functional collaboration with project managers to establish ambitious yet realistic coding milestones on pre-release software projects, ensuring timely delivery and exceeding client expectations. </li>
 						<li>Collaboration across departments with other technical departments while maintaining independence, attention to detail and focus on execution and implement high-availability solutions for mission-critical applications, resulting in a 50% reduction in system downtime and improved customer satisfaction. </li>
-						<li> Introduced and worked in an agile environment to deliver 90% high-quality software and effective development practices to enhance product development to test and resolve issues raised while operating the web application.</li>
+						<li>Worked using agile methodologies, and Programming Restful APIs and Proficiently designed and Coded responsive front-end user interfaces using the Angular framework, delivering dynamic and visually appealing web application with 90% improvement.</li>
 						<li>Defined, improved, and migrated contract as needed for the aforementioned APIs. Create and maintain software documentation.
 						</li>
 						<li>developed & enhanced the performance of existing features by 70% with help of multi-tier architecture, by migrating APIs developed in .Net to Java using Java technology, Spring boot, Gradle, ORM – Hibernate/JPA. All the APIs are deployed in the QA section with 100% test coverage. 
