--- a/Work experience.html
+++ b/Work experience.html
@@ -57,6 +57,7 @@
 					<ul>
 						<li>Spearheaded cross-functional collaboration with project managers to establish ambitious yet realistic coding milestones on pre-release software projects, ensuring timely delivery and exceeding client expectations. </li>
 						<li>Collaboration across departments with other technical departments while maintaining independence, attention to detail and focus on execution and implement high-availability solutions for mission-critical applications, resulting in a 50% reduction in system downtime and improved customer satisfaction. </li>
+						<li> Accumulated one year of hands-on experience in SQL development, proficient in creating and optimizing database queries, and contributing to data-driven solutions</li>
 						<li>Worked using agile methodologies, and Programming Restful APIs and Proficiently designed and Coded responsive front-end user interfaces using the Angular framework, delivering dynamic and visually appealing web application with 90% improvement.</li>
 						<li>Defined, improved, and migrated contract as needed for the aforementioned APIs. Create and maintain software documentation.
 						</li>
