--- a/Work experience.html
+++ b/Work experience.html
@@ -58,9 +58,10 @@
 						<li>Spearheaded cross-functional collaboration with project managers to establish ambitious yet realistic coding milestones on pre-release software projects, ensuring timely delivery and exceeding client expectations. </li>
 						<li>Collaboration across departments with other technical departments while maintaining independence, attention to detail and focus on execution and implement high-availability solutions for mission-critical applications, resulting in a 50% reduction in system downtime and improved customer satisfaction. </li>
 						<li> Accumulated one year of hands-on experience in SQL development, proficient in creating and optimizing database queries, and contributing to data-driven solutions</li>
-						<li>Worked using agile methodologies, and Programming Restful APIs and Proficiently designed and Coded responsive front-end user interfaces using the Angular framework, delivering dynamic and visually appealing web application with 90% improvement.</li>
+						<li>Proficient in utilizing Jenkins for CI/CD, and Programming Restful APIs and Proficiently developed Angular Framework and delivered a dynamic and visually appealing web applications with 90% improvement in product Environment and deployed using AWS Lambda.</li>
 						<li>Defined, improved, and migrated contract as needed for the aforementioned APIs. Create and maintain software documentation.
 						</li>
+						
 						<li>developed & enhanced the performance of existing features by 70% with help of multi-tier architecture, by migrating APIs developed in .Net to Java using Java technology, Spring boot, Gradle, ORM – Hibernate/JPA. All the APIs are deployed in the QA section with 100% test coverage. 
 						</li>
 						<li>Responsible for developing new microservices which reduced the load by 40% on the Servers, Microservices are built using spring boot, Restful APIs which include secure coding, web application security. Integrated a relational database MySQL using Spring Data JPA for efficient data management. 
