--- a/Work experience.html
+++ b/Work experience.html
@@ -91,10 +91,10 @@
 				<section class="skills">
 					<h3><u>SKILLS & LEADERSHIP</u></h3>
 					<ul>
-						<li>Programming & Scripting Languages: JAVA,Python(Intermediate),C++,JavaScript, Typescript, Node.js</li>
+						<li>Programming & Scripting Languages:Java(Full stack),C++,Python(Intermediate),C++,JavaScript, Typescript, Node.js</li>
 						<li>Web Expertise: Angular, HTML, CSS, Git</li>
-						<li>Frameworks & Databases: Spring boot,MySQL, Gradle, GitHub, Apache, Maven, Tomcat, Jenkins</li>
-						<li>Expertise: IntelliJ, Eclipse IDE, Visual Studio</li>
+						<li>Frameworks & Databases:Spring boot, Angular, Spring Cloud, Node.js, RDBMS, SQL, MongoDB, Gradle, GitHub, ORM-Hibernate, Docker, AWS Lambda.</li>
+						<li>Tools: IntelliJ, Eclipse IDE, Visual Studio Code</li>
 						</li>
 					</ul>
 				</section>
