--- a/Work experience.html
+++ b/Work experience.html
@@ -77,6 +77,7 @@
 							migrating
 							APIs developed in .Net to Java using Java ,Spring boot
 							,Gradle , ORM – Hibernate.</li>
+						<li>Implemented Agile (CI/CD) methodologies to drive Restful API development, resulting in efficient integration of new web app features and a remarkable 90% product improvement upon deployment.</li>
 						<li> All the APIs are deployed in the QA section with 100% test coverage.</li>
 					</p>
 					<h3>First Clearing App</h3>
@@ -85,7 +86,8 @@
 							implementing
 							new
 							business logics.</li>
-						<li> Responsible for developing new microservices which reduced the load by 40% on the Servers, Microservices are built using spring boot, Restful APIs which include secure coding, web application security. Integrated a relational database MySQL using Spring Data JPA for efficient data management. </li>.
+						
+						<li> Enhanced web app performance by 70% using a multi-tiered architecture and bug fixes, coupled with thorough code reviews and comprehensive JUnit regression testing covering 100% of APIs in the QA environment. </li>.
 					</p>
 				</section>
 				<section class="skills">
@@ -102,20 +104,19 @@
 				<section class="extra-curricular">
 					<h3><u>Extra Curricular Activities & Volunteer</u></h3>
 					<p>
+						<li>Taught Java programming, Data Structures and Algorithms (DSA) to undergraduate students during my final year of bachelor's program, fostering their problem-solving skills, algorithmic thinking, and coding proficiency.</li>
 						<li>volunteered in a swatch bharath event with team of 10 people and led them to accomplish the event.
 						</li>
-					</p>
-					<p>
-						<li>Volunteer Work - community service projects to support underprivileged children</li>
+					
 					</p>
 				</section>
 				<section class="School-Projects">
 					<h3><u>School-Projects</u></h3>
 					<p>
-						<li>Developed a dynamic and interactive  web application using Angular Framework ,allowing seamless navigation and responsive user interface.
-						<li>
-						Designed and developed a desktop messaging platform using Angular and SpringBoot framework to exchange encrypted messages.
-						</li>
+<li>●	Architected and implemented both the front-end UI interface and back-end infrastructure using Angular and Spring Boot for a sophisticated e-commerce web application.</li>
+<li>●	Designed and developed an engaging static website for Bachelors College, enhancing communication and accessibility for students, faculty, and visitors with event updates and essential information.</li>
+<li>●	Successfully orchestrated the deployment of a high-performance static web application on AWS and GCP virtual machines, demonstrating proficiency in cloud infrastructure provisioning, configuration, and management.</li>
+
 					</p>
 				</section>
 		
