--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>Arun kumar Erram</h1>
-				<p> Hey ! I am Arun. Hey ! I am Arun. Welcome to my portfolio! With a strong foundation in software
+				<p>I am Arun Erram. Welcome to my portfolio! With a strong foundation in software
 					development, I bring two years of hands-on experience as a Software Developer and Software Engineer
 					at Infosys. My journey in the tech world has been centered around Java, where I've honed my skills
 					in creating robust and efficient solutions. Through collaborating on diverse projects and
