--- a/Work experience.html
+++ b/Work experience.html
@@ -122,22 +122,10 @@ build code and test files, running the tests, and generating a report of the res
 					
 					</p>
 				</section>
-				<section class="School-Projects">
-					<h3><u>School-Projects</u></h3>
-					<p>
-<li>●	Architected and implemented both the front-end UI interface and back-end infrastructure using Angular and Spring Boot for a sophisticated e-commerce web application.</li>
-<li>●	Designed and developed an engaging static website for Bachelors College, enhancing communication and accessibility for students, faculty, and visitors with event updates and essential information.</li>
-<li>●	Successfully orchestrated the deployment of a high-performance static web application on AWS and GCP virtual machines, demonstrating proficiency in cloud infrastructure provisioning, configuration, and management.</li>
-
-					</p>
-				</section>
-		
 				<section class="certifications">
 					<h3><u>Certifications & Achievements</u></h3>
 					<ul>
-						<li>Successfully completed Infosys Java developer program certification<b>Infosys Certified Java
-								Developer</b>
-						</li>
+						<li>Successfully completed Infosys Java developer program certification<b>Infosys Certified Java Developer</b> </li>
 						<li>Successfully completed AI 900 CERTIFICATION</li>
 						<li>Completed Global Agile Developer certification from Infosys<b>Infosys Agile Globel developer</b>
 						</li>
