--- a/Work experience.html
+++ b/Work experience.html
@@ -44,31 +44,25 @@
 					<li>University of Missouri Kansas City, Masters in Computer Science (JUL 2023 - DEC 2025)</li>
 					<li>Telangana University, Telangana, India</li>
 					 <p>CGPA: 8.8/10, Bachelor of Science - Computer Science (JUN 2017 - SEP 2020)</p>
-					    <p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead - Swatch bharath Event at Undergrad level     (JAN 2019)</p>
-					    <p> ● Student worker & Volunteer Work - community service projects to support underprivileged children (FEB 2020)</p>
+					 <p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead - Swatch bharath Event at Undergrad level     (JAN 2019)</p>
+				         <p> ● Student worker & Volunteer Work - community service projects to support underprivileged children (FEB 2020)</p>
 				</p>
 			
 
 				<section class="work-experience">
 					<h3><u>WORK EXPERIENCE</u></h3>
-					<p><i>
+					<p>
+						<i>
 							<h4><u>Senior Systems Associate, Infosys Limited, India (June 2021 – May 2023) :</u></h4>
-						</i> </p>
+						</i>
+					</p>
 					<ul>
-						<li>  collaborated with project managers to analyze project data and set challenging coding goals by offering fast solutions for
-tough technical issues. </li>
-						<li>  Participated in the entire project life cycle, encompassing activities such as design, coding, testing and fixing
-defects/bugs, all while adhering to Agile methodologies, resulted in raise of 90% Product improvement on product
-deployment. </li>
-						<li>  Coded automated tests and conduct manual testing as directed by senior engineers, ensuring the delivery of robust and
-defect-free software. </li>
-						<li> Showcase a meticulous approach to identifying and fixing software defects, contributing to the overall quality of the
-codebase.</li>
-						
-						<li> Enhanced web app performance by 70% using a multi-tiered architecture and bug fixes, coupled with thorough code
-reviews and comprehensive JUnit regression testing covering 100% of APIs in the QA environment.</li>
-						<li> tilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest
-build code and test files, running the tests, and generating a report of the results once per day.
+						<li>  collaborated with project managers to analyze project data and set challenging coding goals by offering fast solutions for tough technical issues. </li>
+						<li>  Participated in the entire project life cycle, encompassing activities such as design, coding, testing and fixing defects/bugs, all while adhering to Agile methodologies, resulted in raise of 90% Product improvement on product deployment. </li>
+						<li>  Coded automated tests and conduct manual testing as directed by senior engineers, ensuring the delivery of robust and defect-free software. </li>
+						<li> Showcase a meticulous approach to identifying and fixing software defects, contributing to the overall quality of the codebase.</li>
+						<li> Enhanced web app performance by 70% using a multi-tiered architecture and bug fixes, coupled with thorough code reviews and comprehensive JUnit regression testing covering 100% of APIs in the QA environment.</li>
+						<li> tilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.
  </li>
 					</ul>
 				</section>
