--- a/Work experience.html
+++ b/Work experience.html
@@ -79,6 +79,12 @@
 						assessment and monitoring.</li>
 					</p>
 					<p>
+						<li> Orchestrated end-to-end data pipelines for a Health Care insurance company, covering dataset creation, cleaning, and loading into a structured database.</Li>
+						<li> Ensured data accuracy by implementing robust data cleaning processes, enhancing the reliability of analytics outcomes and supporting strategic decision-making.</li>
+						<li>Utilized Apache Sqoop for seamless data transfer between relational databases and Hadoop, enabling integration with the Hadoop Distributed File System (HDFS).</li>
+						<li>Applied Apache Hive and Spark SQL for advanced data processing, analyzing extensive health insurance datasets to uncover patterns, and employed data visualization techniques for effective communication of insights.</li>
+					</p>
+					<p>
 					<h3>E-Commerece Web App | Java, SpringBoot, Angular, AWS Cloud</h3>
 					<li> Developed a Web application using Java , Angular, SpringBoot ,creating, executing, and monitoring Java unit tests
 					within test frameworks.</li>
