--- a/Work experience.html
+++ b/Work experience.html
@@ -36,7 +36,7 @@
 		<!-- Main -->
 		<section id="main" class="wrapper">
 			<div class="inner">
-				<h1 class="major">Work experience and Projects</h1>
+				<h1 class="major"> Education, Work Experience and Projects</h1>
 				<span class="image fit"><img src="images/Wallpaper.png" alt="" /></span>
 				<p>
 				<h3><u>EDUCATION</u></h3>
@@ -44,8 +44,8 @@
 					<li>University of Missouri Kansas City, Masters in Computer Science (JUL 2023 - DEC 2025)</li>
 					<li>Telangana University, Telangana, India</li>
 					 <p>CGPA: 8.8/10, Bachelor of Science - Computer Science (JUN 2017 - SEP 2020)</p>
-					 <p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead - Swatch bharath Event at Undergrad level     (JAN 2019)</p>
-				         <p> ● Student worker & Volunteer Work - community service projects to support underprivileged children (FEB 2020)</p>
+					 <p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead (JAN 2019)</p>
+				         <p> ● Student worker  - community service projects to support underprivileged children (FEB 2020)</p>
 				</p>
 			
 
