--- a/Work experience.html
+++ b/Work experience.html
@@ -43,92 +43,136 @@
 				<p>
 					<li>University of Missouri Kansas City, Masters in Computer Science (JUL 2023 - DEC 2025)</li>
 					<li>Telangana University, Telangana, India</li>
-					 <p>CGPA: 8.8/10, Bachelor of Science - Computer Science (JUN 2017 - SEP 2020)</p>
-					 <p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead (JAN 2019)</p>
-				         <p> ● Student worker  - community service projects to support underprivileged children (FEB 2020)</p>
+				<p>CGPA: 8.8/10, Bachelor of Science - Computer Science (JUN 2017 - SEP 2020)</p>
+				<p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead (JAN
+					2019)</p>
+				<p> ● Student worker - community service projects to support underprivileged children (FEB 2020)</p>
 				</p>
-			
+
 
 				<section class="work-experience">
 					<h3><u>WORK EXPERIENCE</u></h3>
 					<p>
 						<i>
-							<h4><u>Senior Systems Associate, Infosys Limited, India (June 2021 – May 2023) :</u></h4>
+							<h4><u>Software Engineer, Infosys Limited, India (June 2021 – May 2023) :</u></h4>
 						</i>
 					</p>
 					<ul>
-						<li>  collaborated with project managers to analyze project data and set challenging coding goals by offering fast solutions for tough technical issues. </li>
-						<li>  Participated in the entire project life cycle, encompassing activities such as design, coding, testing and fixing defects/bugs, all while adhering to Agile methodologies, resulted in raise of 90% Product improvement on product deployment. </li>
-						<li>  Coded automated tests and conduct manual testing as directed by senior engineers, ensuring the delivery of robust and defect-free software. </li>
-						<li> Showcase a meticulous approach to identifying and fixing software defects, contributing to the overall quality of the codebase.</li>
-						<li> Enhanced web app performance by 70% using a multi-tiered architecture and bug fixes, coupled with thorough code reviews and comprehensive JUnit regression testing covering 100% of APIs in the QA environment.</li>
-						<li> tilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.
- </li>
+						<li>collaborated with project managers to analyze project data and set challenging coding goals
+							by offering fast solutions for
+							tough technical issues.</li>
+						<li> Participated in the entire project life cycle, encompassing activities such as design,
+							coding, testing and fixing
+							defects/bugs, all while adhering to Agile methodologies, resulted in raise of 90% Product
+							improvement on product
+							deployment.</li>
+						<li> Coded automated tests and conduct manual testing as directed by senior engineers, ensuring
+							the delivery of robust and
+							defect-free software.</li>
+						<li> Enhanced web app performance by 70% using a multi-tiered architecture and bug fixes,
+							coupled with thorough code
+							reviews and comprehensive JUnit regression testing covering 100% of APIs in the QA
+							environment.</li>
+						<li> Utilized Jenkins to provide a continuous integration service in order to automate the
+							entire process of loading the latest
+							build code and test files, running the tests, and generating a report of the results once
+							per day.</li>
+						<li> Successfully installed and configured Tomcat and Apache web servers, contributing to a 100%
+							deployment readiness for
+							web applications.</li>
+						<li> Exhibited the ability to work independently and fearlessly sought suggestions from team
+							members when needed,
+							maintaining a high level of autonomy and contributing to a 92% success rate in collaborative
+							projects.
+						<li> Demonstrated proficiency in version control concepts, specifically Git, ensuring efficient
+							collaboration and achieving a
+							90% improvement in source code management throughout the development lifecycle.</li>
 					</ul>
 				</section>
 				<section class="projects">
 					<h3><u>PROJECTS</u></h3>
-					<h3>Predictive Analysis on Diabetic Data | Angular,Tensorflow GCP Cloud</h3></h3>
 					<p>
-						<li>  Developed a web application for diabetes analysis using a tech stack that included Spring Boot, Angular, and Java</li>
-						<li>mplemented end-to-end solutions for data collection, preprocessing, and connectivity, ensuring seamless integration of
-						data sources into the application. </li>
-						<li>  Conducted predictive analysis and modeling within the application to provide valuable insights and recommendations for
-						diabetes management.</li>
-						<li> Contributed to the development of a healthcare solution that empowers users with data-driven tools for diabetes
-						assessment and monitoring.</li>
+					<h3>Spotify Webapp clone | Java, SpringBoot, React.Js, JavaScript</h3>
+					<li> Spearheading the development of an innovative Spotify clone app, leveraging advanced
+						technologies like React.js for the dynamic front-end and Spring Boot (Java) for robust back-end
+						functionalities.
+					</li>
+					<li>Crafting a seamless user experience by implementing key features such as secure user
+						authentication, dynamic playlist management, and real-time audio streaming, closely mirroring
+						the comprehensive capabilities of the original Spotify platform.</li>
+					<li> Collaborating seamlessly within a cross-functional team to ensure the successful integration of
+						diverse components. Showcasing adaptability and expertise in both JavaScript (React.js) for
+						creating engaging user interfaces and Java (Spring Boot) for robust server-side logic,
+						facilitating effective communication between the client and server</li>
 					</p>
+
 					<p>
-						<h3>Healtcare System Big Data Analytics | Mysql, Sqoop, Hive, Hadoop, Spark, Tablue</h3>
-						<li> Orchestrated end-to-end data pipelines for a Health Care insurance company, covering dataset creation, cleaning, and loading into a structured database.</Li>
-						<li> Ensured data accuracy by implementing robust data cleaning processes, enhancing the reliability of analytics outcomes and supporting strategic decision-making.</li>
-						<li>Utilized Apache Sqoop for seamless data transfer between relational databases and Hadoop, enabling integration with the Hadoop Distributed File System (HDFS).</li>
-						<li>Applied Apache Hive and Spark SQL for advanced data processing, analyzing extensive health insurance datasets to uncover patterns, and employed data visualization techniques for effective communication of insights.</li>
+					<h3>Healtcare System Big Data Analytics | Mysql, Sqoop, Hive, Hadoop, Spark, Tablue</h3>
+					<li> Orchestrated end-to-end data pipelines for a Health Care insurance company, covering dataset
+						creation, cleaning, and loading into a structured database.</Li>
+					<li> Ensured data accuracy by implementing robust data cleaning processes, enhancing the reliability
+						of analytics outcomes and supporting strategic decision-making.</li>
+					<li>Utilized Apache Sqoop for seamless data transfer between relational databases and Hadoop,
+						enabling integration with the Hadoop Distributed File System (HDFS).</li>
+					<li>Applied Apache Hive and Spark SQL for advanced data processing, analyzing extensive health
+						insurance datasets to uncover patterns, and employed data visualization techniques for effective
+						communication of insights.</li>
 					</p>
 					<p>
 					<h3>E-Commerece Web App | Java, SpringBoot, Angular, AWS Cloud</h3>
-					<li> Developed a Web application using Java , Angular, SpringBoot ,creating, executing, and monitoring Java unit tests
-					within test frameworks.</li>
+					<li> Developed a Web application using Java , Angular, SpringBoot ,creating, executing, and
+						monitoring Java unit tests
+						within test frameworks.</li>
 					<li> implemented the CI/CD pipeline. This involved automating various stages of the software.
 					</li>
-					<li>Development lifecycle, including code integration, testing, and deployment. development and test environments,
-					including database and server upgrades.</li>
-					<li> Created a Linux virtual machine to run on AWS Cloud so that the program is able to run everyday from the cloud.</li>
+					<li>Development lifecycle, including code integration, testing, and deployment. development and test
+						environments,
+						including database and server upgrades.</li>
+					<li> Created a Linux virtual machine to run on AWS Cloud so that the program is able to run everyday
+						from the cloud.</li>
 					</p>
 					<P>
 					<h3> Tech Blog | Java, SpringBoot , DynamoDb</h3>
-					<li>  Created an blog based application using Java ,SpringBoot, DynamoDb,Firebase.</li>
-					<li> Application is to post any techenical blog by the user, also Implemented real world chat system for user communication.</li>
+					<li> Created an blog based application using Java ,SpringBoot, DynamoDb,Firebase.</li>
+					<li> Application is to post any techenical blog by the user, also Implemented real world chat system
+						for user communication.</li>
 					<li>Utilized and Implemented the Java JWT Authnentication for login security using SpringBoot.</li>
 					</P>
-				
+
 				</section>
 				<section class="skills">
 					<h3><u>SKILLS & LEADERSHIP</u></h3>
 					<ul>
-						<li>Programming & Scripting Languages:Java(Full stack),C++,Python(Intermediate),C++,JavaScript, Typescript, Node.js</li>
+						<li>Programming & Scripting Languages:Java(Full stack),C++,Python(Intermediate),C++,JavaScript,
+							Typescript, Node.js</li>
 						<li>Web Expertise: Angular, HTML, CSS, Git</li>
-						<li>Frameworks & Databases:Spring boot, Angular, Spring Cloud, Node.js, RDBMS, SQL, MongoDB, Gradle, GitHub, ORM-Hibernate, Docker, AWS Lambda.</li>
+						<li>Frameworks & Databases:Spring boot, Angular, Spring Cloud, Node.js, RDBMS, SQL, MongoDB,
+							Gradle, GitHub, ORM-Hibernate, Docker, AWS Lambda.</li>
 						<li>Tools: IntelliJ, Eclipse IDE, Visual Studio Code</li>
 						</li>
 					</ul>
 				</section>
-		
+
 				<section class="extra-curricular">
 					<h3><u>Extra Curricular Activities & Volunteer</u></h3>
 					<p>
-						<li>Taught Java programming, Data Structures and Algorithms (DSA) to undergraduate students during my final year of bachelor's program, fostering their problem-solving skills, algorithmic thinking, and coding proficiency.</li>
-						<li>volunteered in a swatch bharath event with team of 10 people and led them to accomplish the event.
+						<li>Taught Java programming, Data Structures and Algorithms (DSA) to undergraduate students
+							during my final year of bachelor's program, fostering their problem-solving skills,
+							algorithmic thinking, and coding proficiency.</li>
+						<li>volunteered in a swatch bharath event with team of 10 people and led them to accomplish the
+							event.
 						</li>
-					
+
 					</p>
 				</section>
 				<section class="certifications">
 					<h3><u>Certifications & Achievements</u></h3>
 					<ul>
-						<li>Successfully completed Infosys Java developer program certification<b>Infosys Certified Java Developer</b> </li>
+						<li>Successfully completed Infosys Java developer program certification<b>Infosys Certified Java
+								Developer</b> </li>
 						<li>Successfully completed AI 900 CERTIFICATION</li>
-						<li>Completed Global Agile Developer certification from Infosys<b>Infosys Agile Globel developer</b>
+						<li>Completed Global Agile Developer certification from Infosys<b>Infosys Agile Globel
+								developer</b>
 						</li>
 						<li>Infosys Ethical Hacker certification</li>
 					</ul>
