updated file of work experience

--- a/Work experience.html
+++ b/Work experience.html
@@ -121,23 +121,14 @@
 					<p>
 					<h3>E-Commerece Web App | Java, SpringBoot, Angular, AWS Cloud</h3>
 					<li> Developed a Web application using Java , Angular, SpringBoot ,creating, executing, and
-						monitoring Java unit tests
-						within test frameworks.</li>
-					<li> implemented the CI/CD pipeline. This involved automating various stages of the software.
-					</li>
+						monitoring Java unit testswithin test frameworks.</li>
+					<li> implemented the CI/CD pipeline. This involved automating various stages of the software.</li>
 					<li>Development lifecycle, including code integration, testing, and deployment. development and test
-						environments,
-						including database and server upgrades.</li>
+						environments, including database and server upgrades.</li>
 					<li> Created a Linux virtual machine to run on AWS Cloud so that the program is able to run everyday
 						from the cloud.</li>
 					</p>
-					<P>
-					<h3> Tech Blog | Java, SpringBoot , DynamoDb</h3>
-					<li> Created an blog based application using Java ,SpringBoot, DynamoDb,Firebase.</li>
-					<li> Application is to post any techenical blog by the user, also Implemented real world chat system
-						for user communication.</li>
-					<li>Utilized and Implemented the Java JWT Authnentication for login security using SpringBoot.</li>
-					</P>
+
 
 				</section>
 				<section class="skills">
