--- a/Work experience.html
+++ b/Work experience.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -20,12 +15,10 @@
 
 	<!-- Header -->
 	<header id="header">
-		<!-- <a href="index.html" class="title"><Hyperspace></a> -->
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="generic.html" class="active">Generic</a></li>
-				<!-- <li><a href="elements.html">Elements</a></li> -->
 			</ul>
 		</nav>
 	</header>
@@ -39,54 +32,44 @@
 				<h1 class="major"> Education, Work Experience and Projects</h1>
 				<span class="image fit"><img src="images/Wallpaper.png" alt="" /></span>
 				<p>
-				<h3><u>EDUCATION</u></h3>
+				<h3><u>Education</u></h3>
 				<p>
 					<li>University of Missouri Kansas City, Masters in Computer Science (JUL 2023 - DEC 2025)</li>
 					<li>Telangana University, Telangana, India</li>
 				<p>CGPA: 8.8/10, Bachelor of Science - Computer Science (JUN 2017 - SEP 2020)</p>
-				<p> ● Volunteer Work - community service projects to support underprivileged childrenTeam Lead (JAN
-					2019)</p>
-				<p> ● Student worker - community service projects to support underprivileged children (FEB 2020)</p>
-				</p>
-
-
+		
 				<section class="work-experience">
-					<h3><u>WORK EXPERIENCE</u></h3>
+					<h3><u>Work Eexperience</u></h3>
 					<p>
 						<i>
 							<h4><u>Software Engineer, Infosys Limited, India (June 2021 – May 2023) :</u></h4>
 						</i>
 					</p>
 					<ul>
-						<li>collaborated with project managers to analyze project data and set challenging coding goals
-							by offering fast solutions for
-							tough technical issues.</li>
-						<li> Participated in the entire project life cycle, encompassing activities such as design,
-							coding, testing and fixing
-							defects/bugs, all while adhering to Agile methodologies, resulted in raise of 90% Product
-							improvement on product
-							deployment.</li>
-						<li> Coded automated tests and conduct manual testing as directed by senior engineers, ensuring
-							the delivery of robust and
-							defect-free software.</li>
-						<li> Enhanced web app performance by 70% using a multi-tiered architecture and bug fixes,
-							coupled with thorough code
-							reviews and comprehensive JUnit regression testing covering 100% of APIs in the QA
-							environment.</li>
-						<li> Utilized Jenkins to provide a continuous integration service in order to automate the
-							entire process of loading the latest
-							build code and test files, running the tests, and generating a report of the results once
-							per day.</li>
-						<li> Successfully installed and configured Tomcat and Apache web servers, contributing to a 100%
-							deployment readiness for
-							web applications.</li>
-						<li> Exhibited the ability to work independently and fearlessly sought suggestions from team
-							members when needed,
-							maintaining a high level of autonomy and contributing to a 92% success rate in collaborative
-							projects.
-						<li> Demonstrated proficiency in version control concepts, specifically Git, ensuring efficient
-							collaboration and achieving a
-							90% improvement in source code management throughout the development lifecycle.</li>
+						<li> collaborated with project managers to analyze project data and set challenging coding goals by offering fast solutions for
+							tough technical issues</li>
+						<li> Participated in the entire project life cycle, encompassing activities such as developing both frontend & backend of Wells
+							Fargo Banking web applications using SpringBoot,Angular,Java,Node.js,JavaScript,SQL,under EAM domain which
+							resulted in 100% enhancement of customer experience through improved user interfacet.</li>
+						<li>  Designing RESTful APIs and microservices architecture patterns.Writing automated tests for microservices using JUnit,
+							Mockito and performing continuous integration and delivery using tools like Jenkins and GitLab CI/CD. Designing and
+							using databases like MySQL to store and retrieve data in microservice</li>
+						<li>  Utilized JFrog Artifactory for managing binary artifacts, including configuring repositories, deploying artifacts, and
+							ensuring secure access control. Streamlined build and deployment processes, contributing to efficient software
+							development workflows</li>
+						<li>  Utilized Docker for containerization, streamlining deployment and testing processes, ensuring consistency and
+							reproducibility, leading to increased production efficiency</li>
+						<li>   Enhanced web app performance by 90% using a multi-tiered architecture ,fixing bugs, coupled with thorough code
+							reviews and with deployment of 98% success rate of APIs in the QA environment</li>
+						<li>  Successfully installed and configured Tomcat and Apache web servers, contributing to a 100% deployment readiness for
+							web applications.
+							</li>
+						<li> Exhibited the ability to work independently and fearlessly sought suggestions from team members when needed,
+							maintaining a high level of autonomy and contributing to a 98% success rate in collaborative projects.
+						</li>							
+						<li>  Documented all supported systems and applications to streamline existing business procedures. Newly authored
+							documentation effectively positions new associates and existing team members for expedited learning.
+							</li>
 					</ul>
 				</section>
 				<section class="projects">
@@ -122,7 +105,7 @@
 					<h3>E-Commerece Web App | Java, SpringBoot, Angular, AWS Cloud</h3>
 					<li> Developed a Web application using Java , Angular, SpringBoot ,creating, executing, and
 						monitoring Java unit testswithin test frameworks.</li>
-					<li> implemented the CI/CD pipeline. This involved automating various stages of the software.</li>
+					
 					<li>Development lifecycle, including code integration, testing, and deployment. development and test
 						environments, including database and server upgrades.</li>
 					<li> Created a Linux virtual machine to run on AWS Cloud so that the program is able to run everyday
@@ -134,12 +117,15 @@
 				<section class="skills">
 					<h3><u>SKILLS & LEADERSHIP</u></h3>
 					<ul>
-						<li>Programming & Scripting Languages:Java(Full stack),C++,Python(Intermediate),C++,JavaScript,
-							Typescript, Node.js</li>
-						<li>Web Expertise: Angular, HTML, CSS, Git</li>
-						<li>Frameworks & Databases:Spring boot, Angular, Spring Cloud, Node.js, RDBMS, SQL, MongoDB,
-							Gradle, GitHub, ORM-Hibernate, Docker, AWS Lambda.</li>
-						<li>Tools: IntelliJ, Eclipse IDE, Visual Studio Code</li>
+						<li><b>Programming</b>:Java SE,Python(Intermediate),JavaScript,
+							Typescript,SQL/MYSQL </li>
+						<li><b>Web Expertise</b>: Angular, ReactJs,HTML, CSS, Git</li>
+							<li><b>Devloper Tools:</b>VS Code, Eclipse, IntelliJ, Docker, Node.Js</li>
+							<li><b>Software development lifecycle Tools</b>: Jira, Jenkins, Git, JFrog Artifactory</li>
+						<li><b>Tools</b>: IntelliJ, Eclipse IDE, Visual Studio Code</li>
+						<li><b>Cloud Technologies</b>: AWS(S3, EC2, Lambda, Kubernaties),GCP</li>
+					<li><b>Build Tools:</b> Maven, Gradle
+					</li>
 						</li>
 					</ul>
 				</section>
